sights type select

--- a/app/src/main/res/layout/activity_aboutapp.xml
+++ b/app/src/main/res/layout/activity_aboutapp.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
