--- a/app/src/main/res/layout/sight_item.xml
+++ b/app/src/main/res/layout/sight_item.xml
@@ -14,7 +14,7 @@
         android:layout_margin="4dp">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageViewMetro"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_marginLeft="164dp"
