--- a/app/src/main/res/layout/activity_sight_on_map.xml
+++ b/app/src/main/res/layout/activity_sight_on_map.xml
@@ -18,6 +18,7 @@
         app:icon="@drawable/back"
         app:iconTint="#d4dbe4"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="#d4dbe4" />
 
     <fragment
