--- a/app/src/main/res/layout/activity_sight_type.xml
+++ b/app/src/main/res/layout/activity_sight_type.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
         android:layout_marginTop="60dp"
         android:text="@string/sights_categories"
         android:textColor="#d4dbe4"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
