--- a/app/src/main/res/layout/activity_sight_type.xml
+++ b/app/src/main/res/layout/activity_sight_type.xml
@@ -8,18 +8,72 @@
     tools:context=".SightType">
 
     <Button
+        android:id="@+id/buttonEntertainment"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="130dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginEnd="56dp"
+        android:drawableTop="@drawable/roller"
+        android:drawableTint="#d4dbe4"
+        android:onClick="entertainmentList"
+        android:text="@string/entertainment"
+        android:textColor="#d4dbe4"
+        android:textSize="10sp"
+        app:iconTint="#d4dbe4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#d4dbe4" />
+
+    <Button
+        android:id="@+id/buttonArchitecture"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="130dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="56dp"
+        android:drawableTop="@drawable/building"
+        android:drawableTint="#d4dbe4"
+        android:onClick="architectureList"
+        android:text="@string/architecture"
+        android:textColor="#d4dbe4"
+        android:textSize="10sp"
+        app:iconTint="#d4dbe4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#d4dbe4" />
+
+    <Button
+        android:id="@+id/buttonOther"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="130dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="376dp"
+        android:layout_marginEnd="56dp"
+        android:drawableTop="@drawable/other"
+        android:drawableTint="#d4dbe4"
+        android:onClick="otherList"
+        android:text="@string/other"
+        android:textColor="#d4dbe4"
+        android:textSize="10sp"
+        app:iconTint="#d4dbe4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#d4dbe4" />
+
+    <Button
         android:id="@+id/buttonFavourites"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="130dp"
         android:layout_height="80dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="376dp"
         android:drawableTop="@drawable/favicon_small"
         android:drawableTint="#d4dbe4"
         android:onClick="favourites"
         android:text="@string/favPage"
         android:textColor="#d4dbe4"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:iconTint="#d4dbe4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,20 +91,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonOther"
+        android:id="@+id/buttonPark"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="130dp"
         android:layout_height="80dp"
-        android:layout_marginTop="184dp"
-        android:layout_marginEnd="56dp"
-        android:drawableTop="@drawable/other"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="280dp"
+        android:drawableTop="@drawable/park"
         android:drawableTint="#d4dbe4"
-        android:onClick="otherList"
-        android:text="@string/other"
+        android:onClick="parkList"
+        android:text="@string/park"
         android:textColor="#d4dbe4"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:iconTint="#d4dbe4"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="#d4dbe4" />
 
@@ -66,7 +120,7 @@
         android:onClick="museumList"
         android:text="@string/museums"
         android:textColor="#d4dbe4"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:iconTint="#d4dbe4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -84,7 +138,7 @@
         android:onClick="cathedralList"
         android:text="@string/cathedral"
         android:textColor="#d4dbe4"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:iconTint="#d4dbe4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -102,7 +156,7 @@
         android:onClick="sightList"
         android:text="@string/sight"
         android:textColor="#d4dbe4"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:iconTint="#d4dbe4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
